# socks5-rs

./: Cargo.toml  LICENSE  README.md
.github/: socks5_e2e.py
.github/workflows/: rust.yml
src/: connection.rs  lib.rs  main.rs  protocol.rs  udp.rs
tests/: integration.rs
