[package]
name = "socks5-rs"
"description" = "A lightweight and fast socks5 server"
version = "1.0.0"
authors = ["Lipeng WANG <wang.lp@outlook.com>"]
edition = "2024"
license= "MIT"
readme = "README.md"
repository = "https://github.com/WANG-lp/socks5-rs"
keywords = ["socks5", "proxy", "async"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.10"
structopt = "0.3"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dashmap = "6"