[package]
name = "socks5-rs"
"description" = "A lightweight and fast socks5 server"
version = "1.0.0"
authors = ["Lipeng WANG <wang.lp@outlook.com>"]
edition = "2024"
license= "MIT"
readme = "README.md"
repository = "https://github.com/WANG-lp/socks5-rs"
keywords = ["socks5", "proxy", "async"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
bytes = "1.10"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }